Fix: Use get(0) instead of getFirst() to access the first element of a list.
The change replaces `infoList.getFirst()` with `infoList.get(0)` for accessing the first element of the WorkInfo list. This ensures compatibility with the standard List interface per https://developer.android.com/about/versions/15/behavior-changes-15

Bug: b/495865892
Flag: EXEMPT BUGFIX
Change-Id: I4a018f3494b251f0cfc26cb648f3d7eb3dc1f50c